# wiegandmqtt

./: .gitignore  CMakeLists.txt  README.md  mqttsettings.h.in  settings.json.example
certificate_helper/: cert_generator.sh  to_header_file_format.py
src/: CMakeLists.txt  common.h  dma.c  dma.h  main.c  mqtt.c  mqtt.h  wiegand.pio  wifi.c  wifi.h
